--- a/style.css
+++ b/style.css
@@ -220,7 +220,8 @@ padding: 40px 50px;
     border: 1px solid #22ff0e;
     padding: 31px;
     border-radius: 15px;
-    background-color: rgb(200, 182, 182);   
+    background-color: rgba(10, 72, 218, 0.809);   
+    color: white;
 }
 .single-box img{
     width: 45px;
@@ -244,6 +245,92 @@ padding: 40px 50px;
     color: #727272
     ;
 }
+
+
+/* Our Sponspors Section Start */
+
+.sopnspor-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
+}
+.sopnspor-text h2{
+ margin-bottom: 15px;
+}
+.sopnspor-text  p{
+ margin: 0 400px;
+ text-align: center;
+}
+.sponspor-icon{
+    display: flex;
+    justify-content: space-between;
+    margin: 60px 0;
+}
+
+
+            /* Extra section css start */
+
+.footer-area{
+    background-image: url(images/footerbackground.jpg);
+    background-size: cover;
+    padding: 250px 0;
+
+}
+.footer {
+    display: flex;
+    justify-content: space-between;
+    color: #FFF4E7;
+     
+}
+.info{
+    flex: 1;
+}
+.contact{
+    flex: 1;
+    text-align: end;
+    color: #131313;
+}
+.bottom{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+    color: #FFF4E7;
+}
+.socila ul{
+    display: flex;
+    gap: 20px;
+    font-size: 40px;
+}
+.socila ul li{
+ list-style-type: none;
+ 
+}
+.socila ul li a{
+ 
+ color: white;
+}
+
+.line{
+    width: 100%;
+    height: 5px;
+    background-color: gray;
+    margin-top: 100px;
+}
+
+/* CopyRight Section css Start */
+
+.copyright p{
+    background: #FFF4E7;
+    padding: 20px 0;
+    border-radius: 8px;
+    text-align: center;
+    margin: 100px 0;
+}
+
+
+
+
 
  
 
