--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ nav > .logo h1{
    text-decoration: none;
    text-transform: capitalize;
    color: black;
+   font-size: 20px;
+   font-weight: bold;
 }
 
 
@@ -242,8 +244,7 @@ padding: 40px 50px;
 }
 .some-fact-text p{
     margin-right: 800px;
-    color: #727272
-    ;
+    color: #727272;
 }
 
 
@@ -312,7 +313,7 @@ padding: 40px 50px;
 }
 
 .line{
-    width: 100%;
+    width: 80%;
     height: 5px;
     background-color: gray;
     margin-top: 100px;
@@ -327,6 +328,184 @@ padding: 40px 50px;
     text-align: center;
     margin: 100px 0;
 }
+
+.hide{
+    display: none;
+}
+
+            /* =============================================================
+                                 Responsive Css Start  
+            ================================================================*/
+
+    @media screen and (max-width: 375px) {
+
+        .container{
+            margin: 0 30px;
+        }
+        nav{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            align-items: center;
+            padding: 10px;
+        }
+        nav > .logo h1{
+            font-size: 30px;
+            color: #FF900E;
+        }
+        .menu-ber > ul{
+            display: flex;
+            gap: 15px;
+        }
+        .menu-ber > ul li{
+          list-style-type: none;
+          text-decoration: none;
+        }
+        .menu-ber > ul li a{
+           text-transform: capitalize;
+           color: black;
+           font-weight: bold;
+           font-size: 18px;
+        }
+        .top-title{
+            display: flex;
+            flex-direction: column;
+        }
+           .top-title h1{
+               font-size:20px;
+               text-align: left;
+               color: #131313;
+           }
+           .top-title p{
+                text-align: left;
+           }
+           .banner img{
+             width: 100%;
+             height: auto;
+        }
+        .gel-text{
+            display: flex;
+            align-items: center;
+            padding: 10px 10px;
+            }
+        .gallar-text{
+            display: flex;
+            flex-direction: column-reverse;
+        }
+        .galarry{
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            column-gap: 20px;
+        }
+        .container{
+            margin: 0 auto;
+        }
+        .feauture-text-img{
+            display: flex;
+            flex-direction: column-reverse;
+            flex: 1;
+            gap: 20px;
+            border-radius: 20px;  
+        }
+        .top-text h2{
+            font-size: 25px;
+            padding-right: 10px;
+        }
+        .top-text p{
+            margin: 20px 5px;
+        }
+        .flying-btn{
+            position: absolute;
+            bottom: -100px;
+           left: 50px;
+           margin-bottom: 10px;  
+        }
+        .some-fact-box{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            justify-content: space-around;
+         }
+         .some-fact-text{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .some-fact-text h2{
+            margin-bottom: 15px;
+            margin: 10px 20px;
+        }
+        .some-fact-text p{
+            margin: 10px 20px;
+            color: #727272;
+            font-size: 20px;
+            text-align: center;
+        }
+        .footer {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            color: #FFF4E7;
+            padding: 10px;
+            font-size: 20px;
+        }
+        .bottom{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 100px;
+            color: #FFF4E7;
+        }
+        .line{
+            width: 100%;
+            height: 5px;
+            margin-top: 50px;
+        }
+        .contact{
+            flex: 1;
+            text-align: left;
+            color: #ffffff;
+            margin-top: 20px;
+            padding: 10px;
+            font-size: 20px;
+        }
+        .footer-area{
+            padding: 100px 0;
+        }
+        .copyright p{
+            padding: 10px 0;
+            border-radius: 8px;
+            font-size: 20px;
+            margin: 50px 0;
+        }
+        .sponspor-icon{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 35px;
+        }
+        .sponspor-icon img{
+            width: 250px;
+            height: 130px;
+            border: 1px solid gray;
+            border-radius: 10px;
+            padding: 10px;
+        }
+        .sopnspor-text h2{
+            margin-bottom: 15px;
+            font-size: 40px;
+           }
+        .sopnspor-text p {
+            margin: 10px 30px;
+            font-size: 20px;
+        }
+
+
+    }
 
 
 
