--- a/style.css
+++ b/style.css
@@ -340,22 +340,24 @@ padding: 40px 50px;
     @media screen and (max-width: 375px) {
 
         .container{
-            margin: 0 50px;
+            margin: 0 30px;
         }
         nav {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
+            justify-content: space-around;
             align-items: center;
             padding: 20px;
         }
-        
         nav > .logo h1 {
-            font-size: 40px;
+            font-size: 30px;
             color: #FF900E;
+            margin-bottom: 5px;
         }
         .menu-ber > ul {
             display: flex;
-            gap: 25px;
+            gap: 14px;
+            margin-top: 5px;
         }
         .menu-ber > ul li{
           list-style-type: none;
@@ -365,81 +367,111 @@ padding: 40px 50px;
            text-transform: capitalize;
            color: black;
            font-weight: bold;
-           font-size: 20px;
+           font-size: 18px;
         }
-
-
+        .banner-top-text{
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+        }
+        .top-title{
+            width: 250px;
+            margin-top: 10px;
+           }
+        .top-title h1 {
+               font-size: 25px;
+               color: #131313;
+               padding: 0;
+           }
+        .top-title p{
+               text-align: center;
+           }
+           .explore-btn{
+            display: flex;
+            justify-content: center;
+            margin: 0;
+        }
         .banner img{
-            width: 600px;
+            width: 300px;
             height: auto;
         }
-
-     
-
-
         .gallar-text{
             display: flex;
             flex-direction: column-reverse;
         }
-
         .galarry{
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             row-gap: 20px;
         }
         .galarry img{
-           width:  550px;
+           width:  250px;
            height: auto;
         }
-
-
         .gel-text{
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 10px 10px;
             }
-
-            .text-area{
-                display: flex;
-                flex-direction: column;
-            }
-            .text-area h3{
-                font-size: 45px;
+        .text-area h3{
+                font-size: 30px;
                 color: #727272;
+                margin: 5px 0;
             }
-       
-
-            .feauture-text-img{
+        .text-area p{
+                margin: 20px 0;
+            }
+        .feauture-text-img{
                 display: flex;
                 flex-direction: column;
             }
-
-            .some-fact-box{
+        .left-margin{
+                margin: 0;
+                padding: 0;
+            }
+        .left-margin > h2 {
+               margin: 0; 
+               padding: 0;
+               font-size: 30px;
+            }
+        .feauture-text{
+                padding: 15px 10px;
+                background: #ffffff;
+                box-shadow: 5px 5px 5px #f3eeee;
+                border-radius: 10px;
+                margin-right: 10px;
+            }
+        .flying-btn{
+                position: absolute;
+                bottom: -100px;
+                left: 60px;
+            }
+        .some-fact-box{
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
                 justify-content: space-around;
              }
-             .some-fact-text{
+        .some-fact-text{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                margin-top: 70px;
+                margin-bottom: 0;
             }
-            .some-fact-text h2{
+        .some-fact-text h2{
                 margin-bottom: 15px;
                 margin: 10px 20px;
             }
-            .some-fact-text p{
-                margin: 10px 20px;
+        .some-fact-text p{
+                margin: 10px 10px;
                 color: #727272;
                 font-size: 20px;
                 text-align: center;
             }
-
-
-            .footer {
+        .footer {
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
@@ -447,7 +479,7 @@ padding: 40px 50px;
                 padding: 10px;
                 font-size: 20px;
             }
-            .bottom{
+        .bottom{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -456,12 +488,12 @@ padding: 40px 50px;
                 margin-top: 100px;
                 color: #FFF4E7;
             }
-            .line{
-                width: 100%;
+        .line{
+                width: 70%;
                 height: 5px;
                 margin-top: 50px;
             }
-            .contact{
+        .contact{
                 flex: 1;
                 text-align: left;
                 color: #ffffff;
@@ -469,34 +501,34 @@ padding: 40px 50px;
                 padding: 10px;
                 font-size: 20px;
             }
-            .footer-area{
+        .footer-area{
                 padding: 100px 0;
             }
-            .copyright p{
+        .copyright p{
                 padding: 10px 0;
                 border-radius: 8px;
                 font-size: 20px;
                 margin: 50px 0;
             }
-            .sponspor-icon{
+        .sponspor-icon{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 gap: 35px;
             }
-            .sponspor-icon img{
+        .sponspor-icon img{
                 width: 250px;
                 height: 130px;
                 border: 1px solid gray;
                 border-radius: 10px;
                 padding: 10px;
             }
-            .sopnspor-text h2{
+        .sopnspor-text h2{
                 margin-bottom: 15px;
                 font-size: 40px;
                }
-            .sopnspor-text p {
+        .sopnspor-text p {
                 margin: 10px 30px;
                 font-size: 20px;
             }
